Fixed spacing bug caused be echoed text

--- a/style.css
+++ b/style.css
@@ -787,7 +787,7 @@ header .nav-login a {
 
 /*Event Page */
 #pagecontent {
-	padding-top: 44px;
+	padding-top: 60px;
 }
 
 #eventform {
